# simfor-ide

./: .gitmodules  CMakeLists.txt  resources.qrc
src/: CMakeLists.txt  main.cpp  mainform.cpp  mainform.h
src/models/: CMakeLists.txt
src/models/filehandler/: CMakeLists.txt  filehandler.cpp  filehandler.h
src/models/filemodel/: CMakeLists.txt  filemodel.h
src/models/filesystemmodel/: CMakeLists.txt  filesystemmodel.cpp  filesystemmodel.h
src/models/runner/: CMakeLists.txt  runner.cpp  runner.h
src/scripts/: build.sh  run.sh
src/ui/: CMakeLists.txt
src/ui/mainform/: CMakeLists.txt  mainform.cpp  mainform.h
ui/: MainWindow.qml  Test.qml  TestWidget.qml
ui/UiKit/: colors.js
ui/UiKit/Buttons/: DefaultButton.qml
ui/panels/commandPanel/: CommandPanelView.qml
ui/panels/fileSystem/: FileSystemPanel.qml  FileSystemView.qml
ui/panels/fileSystemPanel/: FileSystemPanel.qml
ui/panels/workspacePanel/: WCodeEditor.qml  WTabButton.qml  WorkspaceView.qml
